--- a/public_html/php.ini
+++ b/public_html/php.ini
@@ -11,3 +11,4 @@ magic_quotes_gpc=Off
 magic_quotes_runtime=Off
 magic_quotes_sybase=Off
 error_reporting=E_ALL & ~E_NOTICE & ~E_DEPRECATED
+error_log=/home/democrm/logs/php_error.log
