--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require": {
         "monolog/monolog": "^3.9",
-        "filp/whoops": "^2.18"
+        "filp/whoops": "^2.18",
+        "phpmailer/phpmailer": "^6.11"
     },
     "scripts": {
         "test": "phpunit",
